# Qt_Training_Gallery

./: CMakeLists.txt  README.md
src/: PictureImageProvider.cpp  PictureImageProvider.h  main.cpp
src/core/: Album.cpp  Album.h  AlbumDao.cpp  AlbumDao.h  AlbumModel.cpp  AlbumModel.h  DatabaseManager.cpp  DatabaseManager.h  GalleryCore.cpp  GalleryCore.h  Picture.cpp  Picture.h  PictureDao.cpp  PictureDao.h  PictureModel.cpp  PictureModel.h
src/resources/: AlbumListPage.qml  AlbumPage.qml  InputDialog.qml  PageTheme.qml  PicturePage.qml  Style.qml  ToolBarTheme.qml  main.qml  qml.qrc
